# gunshotmatch-cli

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: octocheese.yml  python_ci_linux.yml  python_ci_macos.yml
gunshotmatch_cli/: __init__.py  __main__.py  decision_tree.py  projects.py  unknown.py  versions.py
