[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "gunshotmatch-cli"
version = "0.8.0"
description = "GunShotMatch Command-Line Interface."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/GunShotMatch/gunshotmatch-cli"
"Issue Tracker" = "https://github.com/GunShotMatch/gunshotmatch-cli/issues"
"Source Code" = "https://github.com/GunShotMatch/gunshotmatch-cli"

[project.scripts]
gunshotmatch-cli = "gunshotmatch_cli.__main__:main"

[tool.whey]
base-classifiers = [ "Typing :: Typed",]
python-versions = [ "3.8", "3.9", "3.10", "3.11", "3.12",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "gunshotmatch_cli"

[tool.importcheck]
always = [ "gunshotmatch_cli", "gunshotmatch_cli.__main__", "gunshotmatch_cli.decision_tree",]

[tool.mypy]
python_version = "3.8"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.dep_checker.name_mapping]
attrs = "attr"
pymassspec = "pyms"
scikit-learn = "sklearn"

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]
